[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scene/Main/Control/ControllingTrain.gd" type="Script" id=1]
[ext_resource path="res://Assets/Button/Button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Button/Door.png" type="Texture" id=3]
[ext_resource path="res://Assets/Button/Go.png" type="Texture" id=4]
[ext_resource path="res://Assets/Button/Stop.png" type="Texture" id=5]

[node name="Control" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1534.0
margin_top = 280.0
margin_right = 1918.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect/VBoxContainer"]
position = Vector2( 192, 400 )
texture = ExtResource( 2 )

[node name="Start" type="Button" parent="ColorRect/VBoxContainer/Sprite"]
margin_left = -124.0
margin_top = -361.0
margin_right = 124.0
margin_bottom = -124.0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="ColorRect/VBoxContainer/Sprite"]
margin_left = -121.0
margin_top = -86.0
margin_right = 125.0
margin_bottom = 145.0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="OpenDoor" type="Button" parent="ColorRect/VBoxContainer/Sprite"]
margin_left = -111.0
margin_top = 216.0
margin_right = 125.0
margin_bottom = 374.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/VBoxContainer/Sprite/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Sprite/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Sprite/OpenDoor" to="." method="_on_OpenDoor_pressed"]
